# loom

./: .gitignore  ACP_0_1.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  loom.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: ADR-001-git-is-source-of-truth.md  ADR-002-local-first-default.md  ADR-003-three-primitives-surface.md  ADR-004-no-vfs-foundation.md  ADR-005-python-cli-daemon-foundation.md  ADR-006-acp-first-class.md
docs/alpha/: ALPHA_0_1_CONTRACT.md  BENCHMARKING.md  DOGFOOD_CHECKLIST.md  INSTALL.md  QUICKSTART.md  README.md
docs/user/: ANOTHER_REPO.md  COMMAND_FAQ.md  README.md
src/loom/: __init__.py  (+29 more)
tests/: test_action_errors.py  test_alpha_contract.py  test_authority.py  test_benchmark_runner.py  test_benchmarking.py  test_cli.py  test_cli_actions.py  test_cli_authority.py  test_cli_follow.py  test_cli_output.py  test_cli_parser.py  test_cli_runtime.py  test_cli_scope.py  test_client.py  test_client_api.py  test_daemon.py  test_dependency_graph.py  test_entrypoint.py  test_error_recovery.py  test_guidance.py  test_guidance_actions.py  test_guidance_state.py  test_identity.py  test_mcp.py  test_mcp_graph.py  test_mcp_links.py  test_mcp_prompts.py  test_mcp_readers.py  test_mcp_resources.py  test_mcp_steps.py  test_mcp_support.py  test_mcp_watch.py  test_project.py  test_protocol.py  test_quickstart.py  test_records.py  test_reporting.py  test_store.py  test_store_support.py  test_two_agent_demo.py  (+2 more)
tools/: run_benchmarks.py
(+12 files in other folders)
